Added tasks for creating stream module of ngx

--- a/ansible/webservers.yml
+++ b/ansible/webservers.yml
@@ -5,7 +5,15 @@
   become: True
   tasks:
     - name: Ensure nginx is installed
-      package: name=nginx update_cache=yes
+      package: 
+        name: nginx
+        state: present
+        update_cache: yes
+        
+    - name: Ensure nginx stream module is installed
+      package:
+        name: libnginx-mod-stream
+        state: present
 
     - name: Copy nginx config file
       copy:
@@ -13,23 +21,48 @@
         dest: /etc/nginx/sites-available/default
 
     - name: Enable configuration
-      file: >
-        dest=/etc/nginx/sites-enabled/default
-        src=/etc/nginx/sites-available/default
-        state=link
+      file:
+        dest: /etc/nginx/sites-enabled/default
+        src: /etc/nginx/sites-available/default
+        state: link
 
     - name: Copy index.html
-      template: >
-        src=index.html.j2
-        dest=/usr/share/nginx/html/index.html
+      template:
+        src: index.html.j2
+        dest: /usr/share/nginx/html/index.html
 
     - name: Restart nginx
-      service: name=nginx state=restarted
+      service: 
+        name: nginx 
+        state: restarted
 
 - name: Configure HTTP load balancer with nginx
   hosts: csc_proxy
+  become: True
+  tasks:
+    - name: Ensure nginx is installed
+      package: 
+        name: nginx
+        state: present
+        update_cache: yes
+
+    - name: Ensure nginx stream module is installed
+      package:
+        name: libnginx-mod-stream
+        state: present
+
+    - name: Copy nginx config file
+      copy:
+        src: nginx_proxy.conf
+        dest: /etc/nginx/nginx.conf
+
+    - name: Restart nginx
+      service: 
+        name: nginx 
+        state: restarted
 
 - name: Configure webserver with nginx
   hosts: csc_vms
+  become: true
 
 ...
